fix modal styling for mobile. add shift to normal

--- a/src/app/components/viz-components/grocery-queue/grocery-queue.component.scss
+++ b/src/app/components/viz-components/grocery-queue/grocery-queue.component.scss
@@ -70,6 +70,15 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .configuration {
+    form .rv-wrapper {
+      position: relative;
+      width: 30%;
+      margin-right: 3%;
+      margin-bottom: 20px;
+    }
+  }
+
   .viz-wrapper {
     flex-direction: column;
 
